# nanobot

./: .env  .gitignore  ARCHITECTURE.md  CODE_REVIEW.md  DATABASE_SCHEMA.md  Dockerfile  EVOLUTION_GOVERNANCE.md  README.md  SECURITY_THREAT_MODEL.md  docker-compose.yml  pyproject.toml
nanobot/: __init__.py  __main__.py  config.py
nanobot/agent/: __init__.py  loop.py  memory.py
nanobot/agent/tools/: __init__.py  context_tool.py
nanobot/cli/: __init__.py  commands.py
nanobot/config/: schema.py
nanobot/core/: __init__.py  adapter.py
nanobot/db/: __init__.py  engine.py  json_utils.py  repositories.py  schema_utils.py
nanobot/meta/: __init__.py  architect.py  evolution_engine.py  factory.py  introspector.py  metaclasses.py  observability.py  planner.py  registry.py  schemas.py  security_gate.py  source_intelligence.py  staging_manager.py
nanobot/runtime/: __init__.py  agent_loop.py  bus.py  graph_manager.py  sandbox.py
nanobot/runtime/application_runner/: docker_tool.py  extractor.py  interaction.py
nanobot/runtime/approvals/: service.py
nanobot/security/: __init__.py  policy.py
nanobot/templates/: __init__.py  tool_template.py.j2
nanobot/utils/: path.py
repos/github/: README.md
repos/skills/: README.md
sql/: schema.sql
tests/: conftest.py  test_cli.py  test_core_safety.py  test_db_connection.py  test_evolution.py  test_evolution_integration.py  test_kernel_adapter.py  test_meta_core.py  test_security_release_gate.py  test_source_intelligence.py
tests/utils/: test_abbreviate_path.py
(+1 files in other folders)
